[package]
name = "caris_progress_tracker"
version = "1.0.1"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.2"
diesel = { version = "1.4.8", features = ["sqlite", "uuid", "serde_json", "uuidv07"] }
dotenv = "0.15.0"
serde = "1.0.140"
colored = "2.0.0"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false 
features = ["serve","uuid","json"] 
